k8s/emby.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: ingressroute-emby-tcp
  namespace: default
spec:
  entryPoints:
    - emby
  routes:
    - match: HostSNI(`*`)
      services:
        - name: emby-service
          port: 8096

---
apiVersion: v1
kind: Service
metadata:
  name: emby-service
spec:
  ports:
    - port: 8096
      protocol: TCP
  selector:
    app:  emby
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: emby
  labels:
    app: emby
spec:
  selector:
    matchLabels:
      app: emby
  template:
    metadata:
      labels:
        app: emby
    spec:
      containers:
      - name: emby
        image: emby/embyserver:4.7.6.0
        ports:
        - containerPort: 8096
        - containerPort: 8920
        volumeMounts:
        - mountPath: "/config"
          name: emby-conf-storage
        - mountPath: "/video"
          name: video-storage
        - mountPath: "/classic_video"
          name: classic-video
        - mountPath: "/ptdownload"
          name: pt-storage
        resources:
          limits:
            gpu.intel.com/i915: 1
      volumes:
      - name: emby-conf-storage
        hostPath:
          path: "/homelab/emby/conf"
      - name: video-storage
        nfs:
          path: /my_multimedia
          server: 192.168.88.2
      - name: pt-storage
        nfs:
          path: /ptdownload
          server: 192.168.88.2
      - name: classic-video
        nfs:
          path: /classic_multimedia
          server: 192.168.88.2
