k8s/mongo.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: ingressroute-mongo-tcp
  namespace: default
spec:
  entryPoints:
    - mongo
  routes:
    - match: HostSNI(`*`)
      services:
        - name: mongo-service
          port: 27017

---
apiVersion: v1
kind: Service
metadata:
  name: mongo-service
spec:
  ports:
    - port: 27017
      protocol: TCP
  selector:
    app: mongo 
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongo
  labels:
    app: mongo
spec:
  serviceName: "mongo"
  selector:
    matchLabels:
      app: mongo
  template:
    metadata:
      labels:
        app: mongo
    spec:
      containers:
      - name: mongo
        image: mongo:3.6
        ports:
        - containerPort: 27017
        volumeMounts:
        - mountPath: "/data/db"
          name: mongo-storage
      volumes:
      - name: mongo-storage
        hostPath:
          path: "/homelab/mongo"
